--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/photo"
-    tools:context=".LogInActivity">
+    tools:context=".SignInActivity">
 
     <TextView
         android:id="@+id/logo"
@@ -19,11 +19,11 @@
         android:textStyle="bold"/>
 
     <TextView
-        android:id="@+id/logIn"
+        android:id="@+id/SignIn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/logo"
-        android:text="Log in"
+        android:text="Sign In"
         android:textColor="@color/black"
         android:textSize="35dp"
         android:layout_margin="50dp"
@@ -31,10 +31,10 @@
         android:textStyle="bold"/>
 
     <EditText
-        android:id="@+id/userName"
+        android:id="@+id/Name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/logIn"
+        android:layout_below="@+id/SignIn"
         android:hint="Username"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
@@ -45,12 +45,27 @@
         android:drawablePadding="20dp"/>
 
     <EditText
-        android:id="@+id/password"
+        android:id="@+id/Email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/userName"
-        android:hint="Password"
+        android:layout_below="@+id/Name"
+        android:hint="Email"
+        android:inputType="textWebEmailAddress"
+        android:textColor="@color/black"
+        android:textColorHint="@color/black"
+        android:layout_margin="10dp"
+        android:padding="20dp"
+        android:background="#30ffffff"
+        android:drawableLeft="@drawable/baseline_email_24"
+        android:drawablePadding="20dp"/>
+
+    <EditText
+        android:id="@+id/pass"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/Email"
         android:inputType="textPassword"
+        android:hint="Password"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
         android:layout_margin="10dp"
@@ -62,28 +77,12 @@
     <com.google.android.material.button.MaterialButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/loginBtn"
-        android:layout_below="@+id/password"
-        android:text="Log In"
+        android:id="@+id/signInBtn"
+        android:layout_below="@+id/pass"
+        android:text="Sign In"
         android:backgroundTint="@color/pink"
         android:layout_centerHorizontal="true"
         android:layout_margin="40dp"/>
-
-    <TextView
-        android:id="@+id/SignIn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/loginBtn"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="20dp"
-        android:text="You don't have an account? Sign In"
-        android:textStyle="bold"
-        android:textSize="15dp"
-        android:contextClickable="true"/>
-
 
 
 </RelativeLayout>
