--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -11,12 +11,15 @@
         android:id="@+id/logo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="30dp"
+        android:gravity="center"
         android:text="Logo"
         android:textColor="@color/black"
         android:textSize="50dp"
-        android:layout_margin="30dp"
-        android:gravity="center"
-        android:textStyle="bold"/>
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/SignIn"
@@ -73,6 +76,12 @@
         android:background="#30ffffff"
         android:drawableLeft="@drawable/baseline_password_24"
         android:drawablePadding="20dp"/>
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:visibility="gone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
     <com.google.android.material.button.MaterialButton
         android:layout_width="wrap_content"
