--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -12,33 +12,22 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="50dp"
         android:layout_marginEnd="30dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="50dp"
         android:gravity="center"
-        android:text="Logo"
+        android:text="Sign in"
         android:textColor="@color/black"
-        android:textSize="50dp"
+        android:textSize="45dp"
         android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/SignIn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/logo"
-        android:text="Sign In"
-        android:textColor="@color/black"
-        android:textSize="35dp"
-        android:layout_margin="50dp"
-        android:gravity="center"
-        android:textStyle="bold"/>
 
     <EditText
         android:id="@+id/Name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/SignIn"
-        android:hint="Username"
+        android:layout_below="@+id/logo"
+        android:hint="Name"
+        android:inputType="textWebEmailAddress"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
         android:layout_margin="10dp"
@@ -46,6 +35,8 @@
         android:background="#30ffffff"
         android:drawableLeft="@drawable/baseline_person_24"
         android:drawablePadding="20dp"/>
+
+
 
     <EditText
         android:id="@+id/Email"
@@ -77,6 +68,21 @@
         android:drawableLeft="@drawable/baseline_password_24"
         android:drawablePadding="20dp"/>
 
+    <EditText
+        android:id="@+id/passConfirm"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/pass"
+        android:inputType="textPassword"
+        android:hint="Confirm Password"
+        android:textColor="@color/black"
+        android:textColorHint="@color/black"
+        android:layout_margin="10dp"
+        android:padding="20dp"
+        android:background="#30ffffff"
+        android:drawableLeft="@drawable/baseline_password_24"
+        android:drawablePadding="20dp"/>
+
     <ProgressBar
         android:id="@+id/progressBar"
         android:visibility="gone"
@@ -87,7 +93,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/signInBtn"
-        android:layout_below="@+id/pass"
+        android:layout_below="@+id/passConfirm"
         android:text="Sign In"
         android:backgroundTint="@color/pink"
         android:layout_centerHorizontal="true"
