--- a/app/src/main/res/layout/fragment_addpost.xml
+++ b/app/src/main/res/layout/fragment_addpost.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <TextView
+            android:textColor="@color/black"
             android:id="@+id/text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -20,6 +21,7 @@
             android:textSize="25dp"/>
 
         <Spinner
+            android:textColor="@color/black"
             android:id="@+id/spinner"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -30,6 +32,7 @@
             android:layout_marginBottom="40dp" />
 
         <EditText
+            android:textColor="@color/black"
             android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -41,9 +44,10 @@
             android:hint="Title" />
 
         <EditText
+            android:textColor="@color/black"
             android:id="@+id/messagePost"
-            android:layout_width="373dp"
-            android:layout_height="310dp"
+            android:layout_width="368dp"
+            android:layout_height="175dp"
             android:layout_below="@+id/title"
             android:layout_marginStart="20dp"
             android:layout_marginLeft="20dp"
@@ -52,14 +56,16 @@
             android:layout_marginRight="20dp"
             android:layout_marginBottom="20dp"
             android:gravity="top"
+            android:hint="How do you feel today?"
             android:inputType="textImeMultiLine"
             android:lines="10"
             android:overScrollMode="always"
             android:scrollbarStyle="insideInset"
-            android:scrollbars="vertical"
-            android:hint="How do you feel today?"/>
+            android:scrollbars="vertical" />
 
         <Button
+            android:id="@+id/addPost"
+            android:textColor="@color/black"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/messagePost"
