--- a/app/src/main/res/layout/fragment_addpost.xml
+++ b/app/src/main/res/layout/fragment_addpost.xml
@@ -63,7 +63,7 @@
             android:scrollbarStyle="insideInset"
             android:scrollbars="vertical" />
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/addPost"
             android:textColor="@color/black"
             android:layout_width="wrap_content"
