--- a/app/src/main/res/layout/fragment_card.xml
+++ b/app/src/main/res/layout/fragment_card.xml
@@ -7,6 +7,11 @@
     tools:context=".CardFragment"
     android:background="@color/pink_light">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:verticalScrollbarPosition="left"
+        android:fillViewport="true">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -24,8 +29,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@+id/text"
-            android:rowCount="2"
-            android:columnCount="2"
+            android:rowCount="4"
+            android:columnCount="1"
             >
 
             <androidx.cardview.widget.CardView
@@ -34,12 +39,14 @@
                 android:layout_row="0"
                 android:layout_column="0"
                 android:layout_gravity="fill"
-                android:layout_rowWeight="1"
-                android:layout_columnWeight="1"
-                android:layout_margin="20dp"
+                android:layout_rowWeight="0"
+                android:layout_columnWeight="0"
+                android:layout_margin="10dp"
+                android:layout_marginRight="50dp"
+                android:layout_marginLeft="50dp"
                 app:cardCornerRadius="20dp"
                 app:cardElevation="10dp"
-
+                app:cardBackgroundColor="@color/white"
                 >
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -73,14 +80,17 @@
             <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_row="0"
-                android:layout_column="1"
+                android:layout_row="3"
+                android:layout_column="0"
                 android:layout_gravity="fill"
-                android:layout_rowWeight="1"
-                android:layout_columnWeight="1"
-                android:layout_margin="20dp"
+                android:layout_rowWeight="3"
+                android:layout_columnWeight="0"
+                android:layout_margin="10dp"
+                android:layout_marginRight="50dp"
+                android:layout_marginLeft="50dp"
                 app:cardCornerRadius="20dp"
-                app:cardElevation="10dp">
+                app:cardElevation="10dp"
+                app:cardBackgroundColor="@color/white">
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -111,10 +121,13 @@
                 android:layout_column="0"
                 android:layout_gravity="fill"
                 android:layout_rowWeight="1"
-                android:layout_columnWeight="1"
-                android:layout_margin="20dp"
+                android:layout_columnWeight="0"
+                android:layout_margin="10dp"
+                android:layout_marginRight="50dp"
+                android:layout_marginLeft="50dp"
                 app:cardCornerRadius="20dp"
-                app:cardElevation="10dp">
+                app:cardElevation="10dp"
+                app:cardBackgroundColor="@color/white">
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -144,14 +157,17 @@
                 android:id="@+id/vacation"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_row="1"
-                android:layout_column="1"
+                android:layout_row="2"
+                android:layout_column="0"
                 android:layout_gravity="fill"
-                android:layout_rowWeight="1"
-                android:layout_columnWeight="1"
-                android:layout_margin="20dp"
+                android:layout_rowWeight="2"
+                android:layout_columnWeight="0"
+                android:layout_margin="10dp"
+                android:layout_marginRight="50dp"
+                android:layout_marginLeft="50dp"
                 app:cardCornerRadius="20dp"
                 app:cardElevation="10dp"
+                app:cardBackgroundColor="@color/white"
 
                 >
                 <LinearLayout
@@ -180,5 +196,6 @@
 
         </GridLayout>
     </RelativeLayout>
+    </ScrollView>
 
 </FrameLayout>
