--- a/app/src/main/res/layout/fragment_card.xml
+++ b/app/src/main/res/layout/fragment_card.xml
@@ -34,6 +34,7 @@
             >
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/family"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_row="0"
@@ -42,8 +43,8 @@
                 android:layout_rowWeight="0"
                 android:layout_columnWeight="0"
                 android:layout_margin="10dp"
-                android:layout_marginRight="50dp"
-                android:layout_marginLeft="50dp"
+                android:layout_marginRight="120dp"
+                android:layout_marginLeft="120dp"
                 app:cardCornerRadius="20dp"
                 app:cardElevation="10dp"
                 app:cardBackgroundColor="@color/white"
@@ -86,8 +87,8 @@
                 android:layout_rowWeight="3"
                 android:layout_columnWeight="0"
                 android:layout_margin="10dp"
-                android:layout_marginRight="50dp"
-                android:layout_marginLeft="50dp"
+                android:layout_marginRight="120dp"
+                android:layout_marginLeft="120dp"
                 app:cardCornerRadius="20dp"
                 app:cardElevation="10dp"
                 app:cardBackgroundColor="@color/white">
@@ -123,8 +124,8 @@
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="0"
                 android:layout_margin="10dp"
-                android:layout_marginRight="50dp"
-                android:layout_marginLeft="50dp"
+                android:layout_marginRight="120dp"
+                android:layout_marginLeft="120dp"
                 app:cardCornerRadius="20dp"
                 app:cardElevation="10dp"
                 app:cardBackgroundColor="@color/white">
@@ -163,8 +164,8 @@
                 android:layout_rowWeight="2"
                 android:layout_columnWeight="0"
                 android:layout_margin="10dp"
-                android:layout_marginRight="50dp"
-                android:layout_marginLeft="50dp"
+                android:layout_marginRight="120dp"
+                android:layout_marginLeft="120dp"
                 app:cardCornerRadius="20dp"
                 app:cardElevation="10dp"
                 app:cardBackgroundColor="@color/white"
