--- a/app/src/main/res/layout/post.xml
+++ b/app/src/main/res/layout/post.xml
@@ -5,16 +5,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardElevation="8dp"
     app:cardCornerRadius="8dp"
-    android:layout_margin="16dp">
+    android:layout_margin="30dp"
+    >
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-    
+
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
+
+        android:background="@color/white"
         android:orientation="vertical">
 
         <LinearLayout
@@ -29,16 +31,16 @@
                 android:text="Date :"
                 android:textColor="@color/black"
                 android:textSize="25sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/datePost"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="11-10-2023 23:07:08"
                 android:layout_marginLeft="8dp"
+                android:text="Empty"
                 android:textColor="@color/black"
-                android:textSize="25sp"/>
+                android:textSize="25sp" />
 
         </LinearLayout>
 
@@ -54,16 +56,16 @@
                 android:text="Title :"
                 android:textColor="@color/black"
                 android:textSize="25sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/titlePost"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="My day"
                 android:layout_marginLeft="8dp"
+                android:text="Empty"
                 android:textColor="@color/black"
-                android:textSize="25sp"/>
+                android:textSize="25sp" />
 
         </LinearLayout>
 
@@ -77,15 +79,15 @@
                 android:id="@+id/post"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Today is my day"
                 android:layout_marginLeft="8dp"
+                android:text="Empty"
                 android:textColor="@color/black"
-                android:textSize="25sp"/>
+                android:textSize="25sp" />
 
         </LinearLayout>
 
     </LinearLayout>
 
-    </ScrollView>
 
+    </ScrollView>
 </androidx.cardview.widget.CardView>
